Show ne congrats text

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <h2>Your Triangle is Scalene! Try again...</h2>
         </div>
         <div id="correct">
-          <h2>Congradulations are creating sides that would not make a triangle!</h2>
+          <h2>Congrats for creating sides that would not make a triangle!</h2>
         </div>
       </div>
     </div>
